--- a/src/view/components/VideoView.mxml
+++ b/src/view/components/VideoView.mxml
@@ -9,6 +9,9 @@
 			import org.osmf.events.LoadEvent;
 			import org.osmf.events.MediaPlayerStateChangeEvent;
 			
+			import view.skins.BackType;
+			import view.skins.whichButton;
+			
 			public static var VIDEO_LOOPED:String = "VIDEO_LOOPED";
 			public static var GO_PORTFOLIO:String 	= "GO_PORTFOLIO";
 			
@@ -96,6 +99,8 @@
 				
 				Console.log( e.state, this)
 			}
+			
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -105,4 +110,5 @@
 					bytesLoadedChange="onLoading(event)"   
 					horizontalCenter="0" verticalCenter="0" autoRewind="true" id="video" loop="true" pauseWhenHidden="true" width="100%" height="100%" scaleMode="letterbox"  source="resources/video/which-animatic.f4v">
 	</s:VideoDisplay>
+	<s:Button id="btnWeb" skinClass="view.skins.overlayButton" y="900" x="660" label="Touch screen to find out more about Which?" />	
 </s:NavigatorContent>
