--- a/src/view/components/VideoView.mxml
+++ b/src/view/components/VideoView.mxml
@@ -16,6 +16,7 @@
 			public static var GO_PORTFOLIO:String 	= "GO_PORTFOLIO";
 			
 			
+			
 			protected var timeoutLoops:int = 0;
 			protected var loopCounts:int = 0;
 			protected function onCreate( e:Event ):void
@@ -65,6 +66,10 @@
 					video.autoRewind = false;
 					video.play();
 					stage.addEventListener( MouseEvent.MOUSE_MOVE, portfolio);
+					
+					
+					
+
 				}
 				
 			}
@@ -110,5 +115,5 @@
 					bytesLoadedChange="onLoading(event)"   
 					horizontalCenter="0" verticalCenter="0" autoRewind="true" id="video" loop="true" pauseWhenHidden="true" width="100%" height="100%" scaleMode="letterbox"  source="resources/video/which-animatic.f4v">
 	</s:VideoDisplay>
-	<s:Button id="btnWeb" skinClass="view.skins.overlayButton" y="900" x="660" label="Touch screen to find out more about Which?" />	
+	<s:Button id="btnOverlayVideo" skinClass="view.skins.overlayButton" y="900" x="100" label="Touch screen to find out more about Which?" />	
 </s:NavigatorContent>
