--- a/src/view/components/VideoView.mxml
+++ b/src/view/components/VideoView.mxml
@@ -5,7 +5,7 @@
 	<fx:Script>
 		<![CDATA[
 			import com.which.utils.Console;
-			
+			import flash.ui.Mouse;
 			import org.osmf.events.LoadEvent;
 			import org.osmf.events.MediaPlayerStateChangeEvent;
 			
@@ -59,6 +59,10 @@
 			{
 				if (video!=null)
 				{
+					Console.log("video startup", this);
+					
+					
+					
 					video.videoObject.smoothing = true;
 					video.removeEventListener( Event.COMPLETE, onComplete );
 					video.addEventListener( Event.COMPLETE, onComplete );
@@ -66,8 +70,8 @@
 					video.autoRewind = false;
 					video.play();
 					stage.addEventListener( MouseEvent.MOUSE_MOVE, portfolio);
-					
-					
+					setTimeout( hideMouse, 10);
+					Mouse.hide();
 					
 
 				}
@@ -77,6 +81,9 @@
 			{
 				if (video!=null)
 				{
+					Console.log("video shutdown", this);
+					
+					Mouse.show();
 					stage.removeEventListener( MouseEvent.MOUSE_MOVE, portfolio);
 					video.removeEventListener( Event.COMPLETE, onComplete );
 					video.loop = false;
@@ -91,6 +98,10 @@
 				shutdown();
 				this.dispatchEvent( new Event( GO_PORTFOLIO ) );
 			}
+			protected function hideMouse( e:Event=null ):void
+			{
+				Mouse.hide();
+			}
 			protected function createVideo( e:Event ):void
 			{
 				startup();
@@ -99,6 +110,7 @@
 			{
 				
 			}
+			
 			
 			protected function stateChange(e:MediaPlayerStateChangeEvent):void {
 				
@@ -112,7 +124,7 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:VideoDisplay creationComplete="createVideo(event)" mediaPlayerStateChange="stateChange(event)"  
-					bytesLoadedChange="onLoading(event)"   
+					bytesLoadedChange="onLoading(event)"    
 					horizontalCenter="0" verticalCenter="0" autoRewind="true" id="video" loop="true" pauseWhenHidden="true" width="100%" height="100%" scaleMode="letterbox"  source="resources/video/which-animatic.f4v">
 	</s:VideoDisplay>
 	<s:Button id="btnOverlayVideo" skinClass="view.skins.overlayButton" y="980" x="0" label="Touch screen to find out more about Which?" />	
